[package]
name = "v1"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Request", "Response", "HtmlInputElement", "console"] }
wasm-bindgen-futures = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]
