[package]
name = "v1"
version = "0.1.0"
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Request", "Response", "console"] }
wasm-bindgen-futures = "0.4"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
console_log = "0.2"
log = "0.4"
js_sys = "0.3"
